# matrix-belote

./: Dockerfile  README.md  belote.py  docker-compose.yaml  main.py  pyproject.toml  state.py
